--- a/index.html
+++ b/index.html
@@ -9,30 +9,13 @@
 </head>
 <body>
     <section>
-        <div class="container">
+        <div id="insert">
             <div class="key">
-            <h1>Pressed key</h1>
-            <h2>Space</h2>
-        </div>
-            <div class="arrow"><img src="./Arrow_east.svg" alt="arrow image"></div>
-            <div class="keyCode">
-                <h1>event.code</h1>
-                <h2>32</h2>    
-            </div>
-            <div class="keyValue">
-                <h1>event.key</h1>
-                <h2>32</h2>
-            </div>
-            <div class="whichValue">
-                <h1>event.which</h1>
-                <h2>32</h2>
+                Welcome! Press any key to get the event keyCode
             </div>
         </div>
     </section>
 
-
-
-    
     <script src="./app.js"></script>
     
 </body>
